# physically-based-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
assets/shaders/: BlinnPhong.lib.glsl  Camera.lib.glsl  Gamma.lib.glsl  fullscreen_vertex.glsl
assets/shaders/geometry_pass/: fragment.glsl  vertex.glsl
assets/shaders/imgui/: fragment.glsl  vertex.glsl
assets/shaders/pbr/: fragment.glsl  lighting.glsl  vertex.glsl
assets/shaders/tonemappers/: aces+gamma.glsl
cmake/: CompileShaders.cmake  Dependencies.cmake
src/: CMakeLists.txt
src/gltf_viewer/: App.cpp  App.hpp  AppUi.cpp  AppUi.hpp  CMakeLists.txt  CameraController.hpp  Main.cpp
src/gltf_viewer/ui/: PerformanceOverlay.cpp  PerformanceOverlay.hpp  SceneTree.cpp  SceneTree.hpp
src/pbr_engine/: CMakeLists.txt
src/pbr_engine/core/: CMakeLists.txt
src/pbr_engine/core/pbr/core/: GpuHandle.cpp  GpuHandle.hpp  GpuHandleCreateInfo.hpp  PhysicalDeviceProperties.hpp  PipelineBuilder.hpp  Swapchain.cpp  Swapchain.hpp  VertexTraits.hpp
src/pbr_engine/engine/: CMakeLists.txt
src/pbr_engine/engine/pbr/: AsyncSubmitInfo.hpp  AsyncSubmitter.cpp  AsyncSubmitter.hpp  Buffer.cpp  Buffer.hpp  CameraData.hpp  CameraUniform.hpp  DescriptorSetAllocator.hpp  GBuffer.cpp  GBuffer.hpp  HdrImage.cpp  HdrImage.hpp  Image.hpp  Image2D.hpp  Material.cpp  Material.hpp  Mesh.hpp  MeshBuilder.cpp  MeshBuilder.hpp  MeshVertex.hpp  ModelPushConstant.hpp  PbrPipeline.cpp  PbrPipeline.hpp  PbrPushConstants.hpp  PbrRenderSystem.cpp  PbrRenderSystem.hpp  RenderCoroutine.cpp  RenderCoroutine.hpp  Scene.cpp  Scene.hpp  Surface.cpp  Surface.hpp  SwapchainImageView.cpp  SwapchainImageView.hpp  TonemapperSystem.cpp  TonemapperSystem.hpp  TransferStager.cpp  TransferStager.hpp  Uniform.hpp
src/pbr_engine/engine/pbr/memory/: Allocation.cpp  Allocation.hpp  AllocationInfo.hpp  IAllocator.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp
src/pbr_engine/gltf/: CMakeLists.txt
src/pbr_engine/gltf/pbr/gltf/: Asset.cpp  Asset.hpp  Loader.cpp  Loader.hpp
src/pbr_engine/image/: CMakeLists.txt
src/pbr_engine/image/pbr/image/: LoadImage.cpp  LoadImage.hpp
src/pbr_engine/imgui/: CMakeLists.txt
src/pbr_engine/imgui/pbr/imgui/: Pipeline.cpp  Pipeline.hpp  PushConstant.hpp  Renderer.cpp  Renderer.hpp
src/pbr_engine/utils/: CMakeLists.txt
src/pbr_engine/utils/pbr/utils/: Algorithms.hpp  Conversions.hpp
src/pbr_engine/vulkan_include/: CMakeLists.txt
src/pbr_engine/vulkan_include/pbr/: Vulkan.hpp
tests/: CMakeLists.txt  PbrCore_Tests.cpp  PbrEngine_Tests.cpp  Sanity_Tests.cpp
